# Cpya

./: .gitignore  Examples.ipynb  Notebook.ipynb  README.md  main.py  pyproject.toml  qbi.py  setup.py
dev/: build.sh  buildfile.py  main.py
src/: __init__.py
src/cpya/: __init__.py  qbi.py  qbi_old.py
src/cpya/tax_def/: qbi_range.py  standard_deduction.py
src/cpya_jacobzufall/: __init__.py  depreciation.py  qbi.py  qbi_range.py  standard_deduction.py
src/cpya_jacobzufall/assets/: __init__.py  asset.py  intangible_asset.py  tangible_asset.py
src/pya_jacobzufall/: depreciation.py  qbi.py
src/pyacty/: __init__.py  constants.py  custom_exceptions.py  custom_types.py
src/pyacty/analytics/: Analytics.py  __init__.py
src/pyacty/assets/: Asset.py  IntangibleAsset.py  TangibleAsset.py  __init__.py
src/pyacty/deductions/: Qbi.py  __init__.py
src/pyacty/entities/: Individual.py  __init__.py
src/pyacty/financial_statements/: BalanceSheet.py  DefaultBalance.py  FinancialStatement.py  IncomeStatement.py  TrueBalance.py  __init__.py
src/pyacty/fundamentals/: Account.py  Balance.py  DefaultBalance.py  Money.py  __init__.py
src/pyacty/statements/: Balance.py  BalanceSheet.py  FinancialStatement.py  (+2 more)
src/taxpy/: constants.py  qbi.py  qbi_range.py
tests/: test_qbi.py
tests/assets/: test_Asset.py  test_IntangibleAsset.py  test_TangibleAsset.py  test_tangible_asset.py
tests/financial_statements/: test_BalanceSheet.py  test_DefaultBalance.py  test_FinancialStatement.py
tests/fundamentals/: test_Money.py
tests/test_tax_def/: test_standard_deduction.py
(+41 files in other folders)
